<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/text_40"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/forgott"
            android:textColor="@color/pruple"
            android:textStyle="bold" />

        <EditText
            style="@style/edit_16"
            android:id="@+id/forgot_email"
            android:drawableLeft="@drawable/mail"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/emailt" />

        <EditText
            style="@style/edit_16"
            android:id="@+id/forgot_password"
            android:drawableLeft="@drawable/safe"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/passwordt" />

        <EditText
            style="@style/edit_16"
            android:id="@+id/forgot_confirmpassword"
            android:drawableLeft="@drawable/confirm"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/confirmpasswordt" />

        <Button
            style="@style/button_16"
            android:id="@+id/forgot_submit"
            app:backgroundTint="@null"
            android:background="@drawable/custom_button"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/submit"
            android:layout_marginTop="@dimen/_20sdp" />
        
    </LinearLayout>

</ScrollView>